--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -242,7 +242,7 @@ There are 51 members identified in the NW subcluster and 35 members in the SE
 subcluster. \par 
 For the weak-lensing mass estimation, we used the
 Monte Carlo Markov Chains (MCMC) mass estimates from \citetalias{Jee13}.
-The Hubble Space Telescope data used in \citetalias{Jee13} was obtained from two
+The Hubble Space Telescope data used in \citetalias{Jee13} were obtained from two
 programs PROP 12755
 and PROP 12477. PROP 12755 consisted of two pointings in the F625W, F775W, and F850LP.
 F850LP for a 6' x 3' strip. While PROP 12477 provided a $2 \times 2$ mosaic
