smaller fonts on fig 1 labels

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -124,7 +124,7 @@ effect of the full ACT survey \citep{Hasselfield2013}, and was discovered
 to be undergoing a major merger approximately in the plane of the sky
 (\citealt{M12}, hereafter M12). El Gordo possesses a range of noteworthy features that allow us to constrain the merger dynamics in multiple ways. 
 \begin{figure*}
-	\includegraphics[width=1\textwidth]{ElGordo.png}
+	\includegraphics[width=1\textwidth]{ElGordo.pdf}
 	\caption{Configuration of El Gordo showing overlay of dark
 		matter distribution in blue, and X-ray emission in red. 
 		(Image credit: NASA, ESA and \citealt{Jee13}). 
