--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -108,7 +108,8 @@ of galaxies, a smaller portion of the mass consist of intercluster
 gas($\sim15\%$ in mass content), and sparsely spaced galaxies ($\sim2\%$ in mass content). During a merger of
 clusters of the high mass range of $10^{14} M_{\sun}$ to the low mass end of
 $10^{15} M_{\sun}$, the subclusters are accelerated to high speeds of 
-$\sim 2000 - 3000~\kilo \meter~\second^{-1}$. The offsets of
+$\sim 2000 - 3000~\kilo \meter~\second^{-1}$ (\citealt{Lage2014},
+\citealt{Dawson12}. The offsets of
 different components of the subclusters reflect the differences in the
 strengths of interactions between various components. Galaxies are
 expected to lead the gas due to their negligible interaction cross
@@ -174,7 +175,7 @@ constraints and uncertainties due to the missing variables.
 Since mergers of clusters proceed on the time-scale of many millions of
 years, one of the most important missing variables to infer is the
 time-since-pericenter (TSP), which is defined to be the time when the mass
-peaks of the DM subclusters coincide.
+peaks of the DM subclusters are at minimum separation.
 Determining the TSP of similar clusters helps
 us reconstruct different stages and recover the physics of a cluster merger.
 In particular there is a degeneracy between the following two possible
@@ -275,7 +276,8 @@ assuming that the only dominant force is the gravitational attraction from
 the masses of two Navarro-Frenk-White (hereafter NFW) DM halos
 \citep{Navarro96}. 
 The gravitational attraction was evaluated and summed at 10 000 fixed grid
-points of each of the NFW halos out to the respective R200c.\par
+points of each of the analytic NFW halo profiles out to the respective
+$r_{200c}$.\par
 In the simulation, many realizations of the collision are
 computed by drawing random realizations of the PDFs of the inputs. Most
 input variables are obtained from previous observations ($\vec{D}$).  One
@@ -689,8 +691,10 @@ avoid the returning model, and in Appendix
 $\beta = 2.0$. 
 In fig.~\ref{fig:our_guessed_scenario} and~\ref{fig:our_guessed_scenario1}, we compared our estimates of the projected locations of the relics to the
 observed location given by Table 3 of L13. The given NW relic and E relic
-locations are R.A.=01:02:46, Decl.=-49:14:43 and R.A.=01:03:07, Decl.=-49:16:16
-respectively. 
+locations are R.A.=$01:02:46$, Decl.=$-49:14:43$ and R.A.=$01:03:07$,
+Decl.=$-49:16:16$
+respectively. These locations correspond to a projected separation of 0.63 Mpc
+(NW relic) and 1.1 Mpc (E relic) from the center of mass.
 
 \label{sec:positionprior}
 
@@ -1095,7 +1099,7 @@ machine learning library for astrophysics \citep{VanderPlas2012}, and IPython, a
 interactive scientific computing, computing in science and engineering
 \citep{Perez2007} .
 \bibliographystyle{mn2e}
-\bibliography{ElGordo1.bib}
+\bibliography{ElGordo1}
 \appendix
 \section{DEFAULT WEIGHTS USED FOR DAWSON'S MONTE CARLO SIMULATION}
 \label{app:priors}
